// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Tabbable props 1`] = `
Object {
  "aria-disabled": undefined,
  "className": "css-1htfomb css-1pwrqjj css-3ekj6a fp-Box fp-Tabbable",
  "disabled": undefined,
  "onClick": [Function],
  "onKeyDown": [Function],
  "onMouseDown": [Function],
  "onMouseOver": [Function],
  "ref": [Function],
  "tabIndex": 0,
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<p
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
  tabindex="0"
>
  Hello world
</p>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
    tabindex="0"
  >
    Tabbable
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
    disabled=""
  >
    Disabled
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
    tabindex="0"
  >
    Focusable
  </div>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<div
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Tabbable"
  tabindex="0"
>
  Tabbable
</div>
`;

exports[`overrides Tabbable.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
  tabindex="0"
>
  Tabbable
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
    tabindex="0"
  >
    Tabbable
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
    disabled=""
  >
    Disabled
  </div>
  <div
    aria-disabled="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
    tabindex="0"
  >
    Focusable
  </div>
</div>
`;

exports[`theming Tabbable.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  opacity: 0.5;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Tabbable"
  tabindex="0"
>
  Tabbable
</div>
`;
